--- a/mvc course work/Views/Team/All.cshtml
+++ b/mvc course work/Views/Team/All.cshtml
@@ -1,17 +1,14 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/Content/driver.css" />
     <title></title>
 </head>
 <body>
     <div>
-    
+    kek
     </div>
 </body>
 </html>
