--- a/mvc course work/Content/menu.css
+++ b/mvc course work/Content/menu.css
@@ -5,7 +5,13 @@
 
 .last a{
    color:#ff0000 !important;
-    background:#000;
+    background:#000 !important;
+}
+.header-menu .last a:hover{
+    transition-property:color,background;
+    transition:0.5s;
+    background:#ff0000;
+    color:#000
 }
 .header {
     width:100%;
@@ -22,9 +28,11 @@
 }
 
 .header-menu {
+    
     float: left;
     margin: 0;
     padding: 0;
+
 }
 
     .header-menu li a {
@@ -64,6 +72,9 @@
 
     .header-menu li a:hover {
         color: #fff;
+        transition-property:background;
+        transition:0.5s;
+        background:#ff0000; 
         display: block;
     }
 
@@ -87,7 +98,7 @@
         float: left;
         position: relative;
         display: block;
-        width: 75px;
+        width: 191px;
         background: #ff0000;
     }
 
