--- a/mvc course work/Views/Driver/About.cshtml
+++ b/mvc course work/Views/Driver/About.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    Layout = null;
-}
-
+﻿@model mvc_course_work.Models.Entities.Driver
 <!DOCTYPE html>
 
 <html>
@@ -11,7 +8,7 @@
 </head>
 <body>
     <div>
-    
+    <p>@Model.longBiography</p>
     </div>
 </body>
 </html>
