--- a/mvc course work/Views/Driver/Index.cshtml
+++ b/mvc course work/Views/Driver/Index.cshtml
@@ -6,56 +6,73 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="~/Content/driver.css" />
     <title;></title;>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+    google.charts.load('current', { 'packages': ['corechart'] });
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+        
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'podiums', 'races'],
+          ['2015', @Model.podiums.Where(x=>x.year.Equals(2015)).Count(), @Model.races.Where(x=>x.year.Equals(2015)).Count()],
+          ['2016', @Model.podiums.Where(x => x.year.Equals(2016)).Count(), @Model.races.Where(x=>x.year.Equals(2016)).Count()]
+            ]);
+
+            var options = {
+                title: 'Podiums',
+                curveType: 'function',
+                legend: { position: 'bottom' }
+            };
+
+            var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+            chart.draw(data, options);
+        }
+    </script>
 </head>
 <body>
-    <div class="information">
-        <div class="biography">
-            <table cellspacing="5" cellpadding="10" >
-                <tr>
-                    <td>Family name</td>
-                    <td>@Model.familyName</td>
-                </tr>
-                <tr>
-                    <td>Name</td>
-                    <td>@Model.name</td>
-                </tr>
-                <tr>
-                    <td>Car</td>
-                    <td>@Model.car</td>
-                </tr>
-                <tr>
-                    <td>Date</td>
-                    <td>@Model.date</td>
-                </tr>
-                <tr>
-                    <td>Place of birth</td>
-                    <td>@Model.placeOfBirth</td>
-                </tr>
-                <tr>
-                    <td>Country</td>
-                    <td>@Model.country</td>
-                </tr>
-                <tr>
-                    <td>Team</td>
-                    <td>@Model.Team.Name</td>
-                </tr>
-                <tr>
-                    <td>Points</td>
-                    <td>@Model.points</td>
-                </tr>
-            </table>
-        </div>
-        <p>
 
-            <img src="@Model.picture" class="photo" align="left">
-            @Model.shortBiography
-
-        </p>
-       <p> <a > see all biography</a></p>
-        <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/jbDLDCkRnYkk" frameborder="0"></iframe>
-        <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/jbDLDCkRnYkk" frameborder="0"></iframe>
-        <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/jbDLDCkRnYkk" frameborder="0"></iframe>
+    <div class="biography">
+        <img src="@Model.picture" class="photo">
+        <table cellspacing="5" cellpadding="5">
+            <tr>
+                <td>Family name</td>
+                <td>@Model.familyName</td>
+            </tr>
+            <tr>
+                <td>Name</td>
+                <td>@Model.name</td>
+            </tr>
+            <tr>
+                <td>Date</td>
+                <td>@Model.date</td>
+            </tr>
+            <tr>
+                <td>Place of birth</td>
+                <td>@Model.placeOfBirth</td>
+            </tr>
+            <tr>
+                <td>Country</td>
+                <td>@Model.country</td>
+            </tr>
+            <tr>
+                <td>Team</td>
+                <td>@Model.Team.Name</td>
+            </tr>
+            <tr>
+                <td>Points</td>
+                <td>@Model.points</td>
+            </tr>
+        </table>
     </div>
+    <p>@Model.shortBiography</p>
+    <p>@Model.podiums.Count.ToString()</p>
+    <div id="curve_chart" style="width: 900px; height: 500px"></div>
+    <p> <a href="@Url.Action("About", "Driver", new {Model.Id })">see full biography</a></p>
+    <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/jbDLDCkRnYkk" frameborder="0"></iframe>
+    <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/jbDLDCkRnYkk" frameborder="0"></iframe>
+    <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/jbDLDCkRnYkk" frameborder="0"></iframe>
 
 </body>
 </html>
