--- a/mvc course work/Views/Race/All.cshtml
+++ b/mvc course work/Views/Race/All.cshtml
@@ -8,20 +8,11 @@
     <link rel="stylesheet" href="~/Content/races.css" />
 </head>
 <body>
-    <div class="races">
-        <ul>
-            @foreach (var b in Model.Races)
-            {
-                <li class="blck">
-
-                    <div class="text">
-                        <a href="@Url.Action("Index", "Driver", new {b.Id})">
-                            <img src="@b.photo" />@b.Name
-                        </a>
-                    </div>
-                </li>
-            }
+    <ul>
+   @foreach(var b in Model.Races)
+   {
+       <li><a href="@Url.Action("Index", "Race", new { b.Id })">@b.Name</a></li>
+   }
         </ul>
-    </div>
 </body>
 </html>
