--- a/mvc course work/Views/Shared/_Layout.cshtml
+++ b/mvc course work/Views/Shared/_Layout.cshtml
@@ -18,7 +18,6 @@
         List<mvc_course_work.Models.Entities.Driver> drivers = kek.Drivers.GetAll().ToList();
         List<mvc_course_work.Models.Entities.Team> teams = kek.Teams.GetAll().ToList();
         List<mvc_course_work.Models.Entities.Race> races = kek.Races.GetAll().ToList();
-        int count = 0;
     }
     <div class="header">
         <div class="header-logo">@Html.ActionLink(" ", "Index", "Home", null, new { @class = "navbar-brand" })</div>
@@ -42,7 +41,7 @@
                 <ul id="submenu">
                     @for (int i = 0; i < 3; i++)
                     {
-                        <li><a href="@Url.Action("Index", "Race", new { races[i].Id })">@races[i].Name</a></li>
+                        <li><a href="@Url.Action("Index", "Race", new { races[i].Id })">@races[i].country</a></li>
                     }
                     <li class="last"><a href="@Url.Action("All","Race")">see all races</a></li>
                 </ul>
@@ -54,8 +53,14 @@
                     {
                         <li><a href="@Url.Action("Index", "Team", new { teams[i].Id })">@teams[i].Name</a></li>
                     }
-                    <li class="last"><a href="@Url.Action("All","Team")">s>see all teams</a></li>
+                    <li class="last"><a href="@Url.Action("All","Team")">see all teams</a></li>
                 </ul>
+            </li>
+            <li>
+                <a href="#">Обратная связь</a>
+            </li>
+            <li>
+                <a href="#">Chat</a>
             </li>
 
         </ul>
@@ -74,3 +79,6 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+/*
+париматч
+*/
