--- a/mvc course work/Views/Team/Index.cshtml
+++ b/mvc course work/Views/Team/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    Layout = null;
-}
+﻿@model mvc_course_work.Models.Entities.Team
 
 <!DOCTYPE html>
 
@@ -11,7 +9,7 @@
 </head>
 <body>
     <div>
-    
+        @Model.Name
     </div>
 </body>
 </html>
