--- a/mvc course work/Content/countdown.css
+++ b/mvc course work/Content/countdown.css
@@ -1,5 +1,5 @@
 ﻿.countdownHolder{
-	width:450px;
+	width:650px;
 	margin:0 auto;
 	font: 40px/1.5 'Open Sans Condensed',sans-serif;
 	text-align:center;
@@ -47,13 +47,16 @@
  * You can use these classes to hide parts
  * of the countdown that you don't need.
  */
-
-.countDays{ /* display:none !important;*/ }
-.countDiv0{ /* display:none !important;*/ }
-.countHours{}
+.countMonth{}
+.countDiv0 
+.countWeek{}
 .countDiv1{}
+.countDays{ /* display:none !important;*/ }
+.countDiv2{ /* display:none !important;*/ }
+.countHours{}
+.countDiv3{}
 .countMinutes{}
-.countDiv2{}
+.countDiv4{}
 .countSeconds{}
 
 
