--- a/mvc course work/Content/countdown.css
+++ b/mvc course work/Content/countdown.css
@@ -1,6 +1,8 @@
 ﻿.countdownHolder{
 	width:650px;
-	margin:0 auto;
+	margin-left:auto;
+    margin-right:auto;
+    margin-top:25%;
 	font: 40px/1.5 'Open Sans Condensed',sans-serif;
 	text-align:center;
 	letter-spacing:-3px;
