--- a/mvc course work/Views/Contacts/Index.cshtml
+++ b/mvc course work/Views/Contacts/Index.cshtml
@@ -1,37 +1,255 @@
-﻿@model mvc_course_work.Models.ContactViewModel
-<!DOCTYPE html>
-
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="~/Content/validator.css" />
-    <title;></title;>
-    <script type="text/javascript" src="~/Scripts/jquery-2.2.3.js"></script>
-    <script type="text/javascript" src="~/Scripts/bootstrap.js"></script>
-    <script type="text/javascript" src="~/Scripts/contact.js"></script>
+    <meta charset="UTF-8">
+    <title>Bootstrap 3 Contact form with Validation</title>
+    <link rel="stylesheet" href="~/Content/style.css">
+
+
+    <script>
+        $(document).ready(function () {
+            $('#contact_form').bootstrapValidator({
+                // To use feedback icons, ensure that you use Bootstrap v3.1.0 or later
+                feedbackIcons: {
+                    valid: 'glyphicon glyphicon-ok',
+                    invalid: 'glyphicon glyphicon-remove',
+                    validating: 'glyphicon glyphicon-refresh'
+                },
+                fields: {
+                    first_name: {
+                        validators: {
+                            stringLength: {
+                                min: 2,
+                            },
+                            notEmpty: {
+                                message: 'Please supply your first name'
+                            }
+                        }
+                    },
+                    last_name: {
+                        validators: {
+                            stringLength: {
+                                min: 2,
+                            },
+                            notEmpty: {
+                                message: 'Please supply your last name'
+                            }
+                        }
+                    },
+                    email: {
+                        validators: {
+                            notEmpty: {
+                                message: 'Please supply your email address'
+                            },
+                            emailAddress: {
+                                message: 'Please supply a valid email address'
+                            }
+                        }
+                    },
+                    phone: {
+                        validators: {
+                            notEmpty: {
+                                message: 'Please supply your phone number'
+                            },
+                            phone: {
+                                country: 'US',
+                                message: 'Please supply a vaild phone number with area code'
+                            }
+                        }
+                    },
+                    address: {
+                        validators: {
+                            stringLength: {
+                                min: 8,
+                            },
+                            notEmpty: {
+                                message: 'Please supply your street address'
+                            }
+                        }
+                    },
+                    city: {
+                        validators: {
+                            stringLength: {
+                                min: 4,
+                            },
+                            notEmpty: {
+                                message: 'Please supply your city'
+                            }
+                        }
+                    },
+                    state: {
+                        validators: {
+                            notEmpty: {
+                                message: 'Please select your state'
+                            }
+                        }
+                    },
+                    zip: {
+                        validators: {
+                            notEmpty: {
+                                message: 'Please supply your zip code'
+                            },
+                            zipCode: {
+                                country: 'US',
+                                message: 'Please supply a vaild zip code'
+                            }
+                        }
+                    },
+                    comment: {
+                        validators: {
+                            stringLength: {
+                                min: 10,
+                                max: 200,
+                                message: 'Please enter at least 10 characters and no more than 200'
+                            },
+                            notEmpty: {
+                                message: 'Please supply a description of your project'
+                            }
+                        }
+                    }
+                }
+            })
+                .on('success.form.bv', function (e) {
+                    $('#success_message').slideDown({ opacity: "show" }, "slow") // Do something ...
+                    $('#contact_form').data('bootstrapValidator').resetForm();
+
+                    // Prevent form submission
+                    e.preventDefault();
+
+                    // Get the form instance
+                    var $form = $(e.target);
+
+                    // Get the BootstrapValidator instance
+                    var bv = $form.data('bootstrapValidator');
+
+                    // Use Ajax to submit form data
+                    $.post($form.attr('action'), $form.serialize(), function (result) {
+                        console.log(result);
+                    }, 'json');
+                });
+        });
+    </script>
 </head>
 <body>
-    <form id="contact_form"  action="http://www.123contactform.com/" method="POST" onsubmit="return validateForm();" enctype="multipart/form-data">
-        <div class="row">
-            <label class="required" for="name">Your name:</label><br />
-            <input id="name" name="name" type="text" value="" size="30" /><br />
-            <span id="name_validation" class="error"></span>
-        </div>
-        <div class="row">
-            <label class="required" for="email">Your email:</label><br />
-            <input id="email" name="email" type="text" value="" size="30" /><br />
-            <span id="email_validation" class="error"></span>
-        </div>
-        <div class="row">
-            <label class="required" for="message">Your message:</label><br />
-            <textarea id="message" name="message" rows="7" cols="30"></textarea><br />
-            <span id="message_validation" class="error"></span>
-        </div>
-       <input type="submit" value="Send email"/>
-    </form>
-    @{
-        
-    }
+    <div class="container">
+        <form class="well form-horizontal" action=" " method="post" id="contact_form">
+            <!-- <fieldset><fieldset> -->
+            <!-- Form Name -->
+            <legend>Contact Us Today!</legend>
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label">First Name</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input name="first_name" placeholder="First Name" class="form-control" type="text">
+                    </div>
+                </div>
+            </div>
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label">Last Name</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input name="last_name" placeholder="Last Name" class="form-control" type="text">
+                    </div>
+                </div>
+            </div>
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label">E-Mail</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                        <input name="email" placeholder="E-Mail Address" class="form-control" type="text">
+                    </div>
+                </div>
+            </div>
 
+            <!-- Text input-->
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">Phone #</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                        <input name="phone" placeholder="(845)555-1212" class="form-control" type="text">
+                    </div>
+                </div>
+            </div>
+            <!-- Text input-->
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">Address</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="address" placeholder="Address" class="form-control" type="text">
+                    </div>
+                </div>
+            </div>
+            <!-- Text input-->
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">City</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="city" placeholder="city" class="form-control" type="text">
+                    </div>
+                </div>
+            </div>
+            <!-- Select Basic -->
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label">Website or domain name</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
+                        <input name="website" placeholder="Website or domain name" class="form-control" type="text">
+                    </div>
+                </div>
+            </div>
+            <!-- radio checks -->
+            <div class="form-group">
+                <label class="col-md-4 control-label">Do you have hosting?</label>
+                <div class="col-md-4">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="hosting" value="yes" /> Yes
+                        </label>
+                    </div>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="hosting" value="no" /> No
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <!-- Text area -->
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">Project Description</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                        <textarea class="form-control" name="comment" placeholder="Project Description"></textarea>
+                    </div>
+                </div>
+            </div>
+            <!-- Success message -->
+            <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+            <!-- Button -->
+            <div class="form-group">
+                <label class="col-md-4 control-label"></label>
+                <div class="col-md-4">
+                    <button type="submit" class="btn btn-warning">Send <span class="glyphicon glyphicon-send"></span></button>
+                </div>
+            </div>
+            </fieldset>
+        </form>
+    </div>
+    </div><!-- /.container -->
 </body>
 </html>
