--- a/mvc course work/Views/Shared/_Layout.cshtml
+++ b/mvc course work/Views/Shared/_Layout.cshtml
@@ -4,11 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Formula 1</title>
+    <link rel='stylesheet prefetch' href="~/Content/bootstrap.min.css">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Scripts/jquery-2.2.3.js")
+    <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
     <link rel="stylesheet" href="~/Content/menu.css" />
-    <script type="text/javascript" src="~/Scripts/jquery-2.2.3.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery-2.2.3.intellisense.js"></script>
+    <link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css'>
 
     <script type="text/javascript" src="~/Scripts/jquery.menu.js"></script>
 </head>
@@ -71,11 +74,6 @@
             <p>&copy; @DateTime.Now.Year - Formula 1</p>
         </footer>
     </div>  
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
-/*
-париматч
-*/
