--- a/mvc course work/Content/races.css
+++ b/mvc course work/Content/races.css
@@ -1,29 +1,89 @@
-﻿body {
-
+body {
     font-size: 12px;
-    background:url(../images/MainWallpapper.jpg);
+    background: url(../images/MainWallpapper.jpg);
     font-family: arial;
-     background-size: 100%;
+    background-size: 100%;
 }
-.blck a{
-    color:#000;
+
+.races {
+    background-color: #FFFFFF;
+    padding: 5px;
+    margin: 15px;
+    display: compact;
 }
-.blck:hover a{ 
-   
-    transition-duration:0.7s;
-    transition-property:color;
+
+    .races .races-list {
+        list-style: none;
+    }
+
+        .races .races-list a {
+            text-decoration: none;
+            color: black;
+        }
+
+        .races .races-list .race {
+            display: block;
+            margin: 3px;
+        }
+
+            .races .races-list .race .image {
+                display: inline-table;
+                width: 320px;
+                height: 180px;
+                overflow:hidden;  
+                margin: 0 auto;
+            }
+
+            .races .races-list .race .text {
+                padding:15px;
+                display: inline-table;
+                font-size: large;
+                font-weight: bold;
+            }
+
+            .races .races-list .race .image img {
+                    -moz-transition: all 1s ease-out;
+                    -o-transition: all 1s ease-out;
+                    -webkit-transition: all 1s ease-out;
+                }
+
+            .races .races-list .race:hover {
+                transition-duration: 0.5s;
+                transition-property: background-color;
+                background-color: #0f0f0f;
+            }
+
+            .races .races-list .race:hover .image img {
+                -webkit-transform: scale(1.1);
+                -moz-transform: scale(1.1);
+                -o-transform: scale(1.1);
+            }
+
+            .races .races-list .race:hover .text {
+                    transition-duration: 0.5s;
+                    transition-property: color;
+                    color: white;
+                }
+
+/*
+.blck a {
+    color: #000;
+}
+
+.blck:hover a {
+    transition-duration: 0.7s;
+    transition-property: color;
     color: #fff;
 }
+
 .blck:hover {
-    
-    transition-duration:0.7s;
-    transition-property:background,color;
+    transition-duration: 0.7s;
+    transition-property: background,color;
     background: #000;
     color: #fff;
 }
 
 .races .blck {
-
     clear: both;
     display: inline-block;
     width: 20%;
@@ -32,23 +92,27 @@
     text-align: center;
 }
 
+.drivers-list {
+    font-size: 20px;
+    list-style-type: none;
+}
+
 .races {
     clear: both;
-    margin-left:1px;
+    margin-left: 1px;
     text-align: center;
     width: 100%;
 }
-.blck p{
-    font-size:large;
-    font-family:fantasy;
 
+.blck p {
+    font-size: large;
+    font-family: fantasy;
 }
-.blck:hover p {
 
-    transition-property:margin-top;
-    margin-top:0px;
-    transition-duration:0.7s;
- 
+.blck:hover p {
+    transition-property: margin-top;
+    margin-top: 0px;
+    transition-duration: 0.7s;
 }
 
 .races > li img {
@@ -69,3 +133,4 @@
     margin-top: 10px;
     clear: both;
 }
+            */
