--- a/mvc course work/Views/Race/All.cshtml
+++ b/mvc course work/Views/Race/All.cshtml
@@ -1,4 +1,4 @@
-﻿@model  mvc_course_work.Models.ViewModel.TakeAllRaces
+@model  mvc_course_work.Models.ViewModel.TakeAllRaces
 <!DOCTYPE html>
 
 <html>
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="~/Content/races.css" />
 </head>
 <body>
-    <div class="drivers">
-        <ul>
-            @foreach (var b in Model.Races)
-            {
-                <li class="blck">
-                    <div class="text">
-                        <a href="@Url.Action("Index", "Driver", new {b.Id})">
-                            <img src="@b.photo" />@b.Name
-                        </a>
+    <div class="races">
+        <ul class="races-list">
+            @foreach (var race in Model.Races)
+            {         
+            <li class="race">
+               <!-- <a href="@Url.Action("Index", "Races", new {race.Id})">             TODO: Вставить ссылку-->      
+                    <a href="#">
+                    <div class="image">
+                        <img src="~/Images/Races/Preview/2016 FORMULA 1 BELGIAN GRAND PRIX.jpg" />  <!-- TODO: Вставить картинку-->
                     </div>
-                </li>
+                    <div class="text">
+                            2016 FORMULA 1 BELGIAN GRAND PRIX   <!-- TODO: Вставить подпись к картинке-->
+                    </div>
+                </a>
+            </li>
             }
+       
         </ul>
     </div>
 </body>
