--- a/mvc course work/Content/driver.css
+++ b/mvc course work/Content/driver.css
@@ -1,28 +1,30 @@
-﻿body {
+body {
     background: url("../Images/MainWallpapper.jpg");
     background-size: auto;
 }
 
-.biography{
-    margin-top:10px;
-}
-.biography img.photo {
-    margin-right: 20px;
-    margin-bottom: 10px;
-    height:100%;
-    width: 25%;
-    float: left;
+.biography {
+    margin-top: 10px;
 }
 
+    .biography img.photo {
+        margin-right: 20px;
+        margin-bottom: 10px;
+        height: 100%;
+        width: 25%;
+        float: left;
+    }
 
-.biography table {
-    font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-}
-.biography table td{
-    width:300px;
-}
+    .biography table {
+        font-size: 30px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+        .biography table td {
+            width: 300px;
+        }
+
 .information {
     font-size: 20px;
 }
@@ -57,8 +59,27 @@
         width: 100%;
     }
 
+.blck .image {
+    width: 265px;
+    height: 265px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+    .blck .image img {
+        -moz-transition: all 1s ease-out;
+        -o-transition: all 1s ease-out;
+        -webkit-transition: all 1s ease-out;
+    }
+
+    .blck:hover .image img {
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+
 .blck img {
-    height: 70%;
+    height: 100%;
     width: 100%;
 }
 
@@ -88,19 +109,19 @@
         transition-property: margin-top,color;
         margin-top: 0px;
         color: #fff;
-        transition-duration: 0.9s;
+        transition-duration: 0.5s;
     }
 
     .blck:hover .text a {
         transition-property: color;
         margin-top: 0px;
         color: #fff;
-        transition-duration: 0.9s;
+        transition-duration: 0.5s;
     }
 
     .blck:hover .text {
         transition-property: background;
-        transition-duration: 0.9s;
+        transition-duration: 0.5s;
         background: #000;
     }
 
@@ -108,7 +129,7 @@
             transition-property: margin-top,color;
             margin-top: 0px;
             color: #fff;
-            transition-duration: 0.9s;
+            transition-duration: 0.5s;
         }
 
     .blck .text .id {
@@ -120,5 +141,5 @@
         transition-property: opacity,color;
         opacity: 1;
         color: #fff;
-        transition-duration: 0.9s;
+        transition-duration: 0.5s;
     }
