--- a/mvc course work/Views/Contacts/Sent.cshtml
+++ b/mvc course work/Views/Contacts/Sent.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = null;
+    ViewBag.Title = "Sent";
 }
 
 <!DOCTYPE html>
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div>
-    
+        <h2>Your message has been sent</h2>
+
     </div>
 </body>
 </html>
