--- a/mvc course work/Views/Shared/_Layout.cshtml
+++ b/mvc course work/Views/Shared/_Layout.cshtml
@@ -4,15 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Formula 1</title>
-    <link rel='stylesheet prefetch' href="~/Content/bootstrap.min.css">
+    <link rel='stylesheet prefetch' href="~/Content/bootstrap.css">
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/Scripts/jquery-2.2.3.js")
-    <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
+    @Scripts.Render("~/Scripts/bootstrap.min.js")
     <link rel="stylesheet" href="~/Content/menu.css" />
-    <link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css'>
-
     <script type="text/javascript" src="~/Scripts/jquery.menu.js"></script>
 </head>
 <body style="background-size:100%">
