--- a/mvc course work/Content/races.css
+++ b/mvc course work/Content/races.css
@@ -1,71 +1,68 @@
 ﻿body {
-
-    font-size: 12px;
-    background:url(../images/MainWallpapper.jpg);
+    background: url(../images/MainWallpapper.jpg);
     font-family: arial;
-     background-size: 100%;
-}
-.blck a{
-    color:#000;
-}
-.blck:hover a{ 
-   
-    transition-duration:0.7s;
-    transition-property:color;
-    color: #fff;
-}
-.blck:hover {
-    
-    transition-duration:0.7s;
-    transition-property:background,color;
-    background: #000;
-    color: #fff;
-}
-
-.races .blck {
-
-    clear: both;
-    display: inline-block;
-    width: 20%;
-    height: 250px;
-    vertical-align: top;
-    text-align: center;
+    background-size: 100%;
 }
 
 .races {
-    clear: both;
-    margin-left:1px;
-    text-align: center;
-    width: 100%;
+    padding: 5px;
+    margin: 15px;
+    display: compact;
 }
-.blck p{
-    font-size:large;
-    font-family:fantasy;
+.race .image img {
+width:100%;
+height:100%;
+}
+    .races .races-list {
+        list-style: none;
+    }
 
-}
-.blck:hover p {
+        .races .races-list a {
+            text-decoration: none;
+            color: black;
+        }
 
-    transition-property:margin-top;
-    margin-top:0px;
-    transition-duration:0.7s;
- 
-}
+        .races .races-list .race {
+            display: block;
+            margin: 3px;
+        }
 
-.races > li img {
-    height: 70%;
-    margin-bottom: 7px;
-}
+            .races .races-list .race .image {
+                display: inline-table;
+                width: 320px;
+                height: 180px;
+                overflow:hidden;  
+                margin: 0 auto;
+            }
 
-.img-border {
-    width: 100%;
-    height: 50%;
-}
+            .races .races-list .race .text {
+                padding:15px;
+                display: inline-table;
+                font-size: large;
+                font-weight: bold;
+            }
 
-.text {
-    width: 100%;
-    margin-bottom: 10px;
-    margin-left: 20%;
-    margin-right: auto;
-    margin-top: 10px;
-    clear: both;
-}
+            .races .races-list .race .image img {
+                    -moz-transition: all 1s ease-out;
+                    -o-transition: all 1s ease-out;
+                    -webkit-transition: all 1s ease-out;
+                }
+
+            .races .races-list .race:hover {
+                transition-duration: 0.5s;
+                transition-property: background-color;
+                background-color: #0f0f0f;
+            }
+
+            .races .races-list .race:hover .image img {
+                -webkit-transform: scale(1.1);
+                -moz-transform: scale(1.1);
+                -o-transform: scale(1.1);
+            }
+
+            .races .races-list .race:hover .text {
+                    transition-duration: 0.5s;
+                    transition-property: color;
+                    color: white;
+                }
+
