--- a/mvc course work/Content/timer.css
+++ b/mvc course work/Content/timer.css
@@ -1,18 +1,4 @@
-﻿/*-------------------------
-	Simple reset
---------------------------*/
-
-
-*{
-	margin:0;
-	padding:0;
-}
-
-
-/*-------------------------
-	General Styles
---------------------------*/
-
+﻿
 a, a:visited {
 	text-decoration:none;
 	outline:none;
@@ -27,11 +13,6 @@ section, footer{
 	display: block;
 }
 
-
-/*----------------------------
-	Main Section
------------------------------*/
-
 #note{
 	color: #000000;
 	font-size: 20px;
@@ -41,23 +22,12 @@ section, footer{
 	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 	width: 600px;
 }
-/*-------------------------
-	Simple reset
---------------------------*/
-
 
 *{
 	margin:0;
 	padding:0;
 }
 
-
-/*-------------------------
-	General Styles
---------------------------*/
-
-
 html{
-    background:url('/Images/MainWallpapper.jpg') !important;
 	position:relative;
 }
