--- a/mvc course work/Views/Team/Index.cshtml
+++ b/mvc course work/Views/Team/Index.cshtml
@@ -10,6 +10,10 @@
 <body>
     <div>
         @Model.Name
+        <address>
+            <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+            <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+        </address>
     </div>
 </body>
 </html>
